--- a/react-portfolio/src/components/services/services.css
+++ b/react-portfolio/src/components/services/services.css
@@ -1,10 +1,15 @@
-.experience_container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+h1 {
+    text-align: center;
 }
 
-.experience_container > div {
+.exp {
+    display: grid;
+    grid-template-columns: 1fr, 1fr;
+    gap: 2rem;
+    margin: 0 auto;
+}
+
+.exp > div {
     background: var(--color-primary);
     padding: 2.4rem 5rem;
     border-radius: 2rem;
@@ -12,30 +17,56 @@
     transition: 500ms ease;
 }
 
-.experience_container > div:hover {
+.exp > div:hover {
     background: transparent;
     border-color: var(--color-primary);
     cursor: default;
 }
 
-.experience_container > div h3 {
+.exp > div h3 {
     text-align: center;
     margin-bottom: 2rem;
     color: var(--color-primary);
 }
 
-.experience_content {
+.content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr, 1fr;
     row-gap: 2rem;
 }
 
-.experience_details {
+.info {
     display: flex;
     gap: 1rem;
 }
 
-.experience_details-icon {
+.info-icon {
     margin-top: 6px;
     color: var(--color-primary)
+}
+
+/* media Queries for phone size devices */
+@media screen and (max-width: 1024px) {
+    .exp {
+        grid-template-columns: 1fr;
+    }
+    .exp > div {
+        width: 80%;
+        padding: 2rem;
+        margin: 0 auto;
+    }
+    .content {
+        padding: 1rem;
+    }
+}
+
+/* Media Queries for small devices */
+@media screen and (max-width: 600px) {
+    .exp {
+        gap: 1rem;
+    }
+    .exp > div {
+        width: 100%;
+        padding: 2rem 1rem;
+    }
 }
